# granite-rs

./: .gitignore  .gitmodules  Cargo.toml  Granite-7.0.gir  README.md  fix.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml  semver.yml
examples/: Cargo.toml
examples/src/: accel_label_view.rs  css_view.rs  date_time_picker_view.rs  dialogs_view.rs  main.rs  sample_dialog.rs  welcome_view.rs
examples/src/settings_view/: mod.rs  settings_page.rs  settings_view.rs  simple_settings_page.rs
granite/: Cargo.toml  Gir.toml
granite/granite-sys/: Cargo.toml  build.rs
granite/granite-sys/src/: lib.rs
granite/granite-sys/src/auto/: versions.txt
granite/granite-sys/tests/: abi.rs  constant.c  layout.c
granite/src/: lib.rs  prelude.rs
granite/src/auto/: accel_label.rs  back_button.rs  bin.rs  box_.rs  constants.rs  date_picker.rs  dialog.rs  drawing_buffer_surface.rs  drawing_color.rs  drawing_utilities.rs  enums.rs  functions.rs  header_label.rs  hyper_text_view.rs  list_item.rs  message_dialog.rs  mod.rs  mode_switch.rs  overlay_bar.rs  placeholder.rs  services_contract.rs  services_contractor_proxy.rs  services_settings_serializable.rs  services_system.rs  settings.rs  settings_page.rs  settings_sidebar.rs  simple_settings_page.rs  style_manager.rs  switch_model_button.rs  time_picker.rs  toast.rs  tool_box.rs  versions.txt
granite/src/subclass/: dialog.rs  mod.rs  settings_page.rs  simple_settings_page.rs
granite/sys/: Cargo.toml  Gir.toml  build.rs
granite/sys/src/: lib.rs
granite/sys/src/auto/: versions.txt
granite/sys/tests/: abi.rs  constant.c  layout.c  manual.h
