[package]
name = "granite-rs-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
glib-macros = "0.19"
once_cell = "1.17.1"

[dependencies.granite]
package = "granite-rs"
path = "../granite"
features = ["v7_1"]

[dependencies.glib]
version = "0.19"

[dependencies.gio]
version = "0.19"

[dependencies.gtk]
package = "gtk4"
version = "0.8"
