[package]
name = "granite-rs"
version = "1.3.0"
edition = "2021"
authors = ["David Hewitt <davidmhewitt@gmail.com>"]
readme = "../README.md"
description = "Rust bindings for Granite"
license = "MIT"
homepage = "https://github.com/davidmhewitt/granite-rs"
repository = "https://github.com/davidmhewitt/granite-rs"
categories = ["api-bindings", "gui"]
keywords = ["gtk4-rs", "GUI"]

[features]
v7_1 = ["granite-rs-sys/v7_1"]
v7_2 = ["granite-rs-sys/v7_2", "v7_1"]
v7_3 = ["granite-rs-sys/v7_3", "v7_2"]
v7_4 = ["granite-rs-sys/v7_4", "v7_3"]
v7_5 = ["granite-rs-sys/v7_5", "v7_4"]
relm4 = ["dep:relm4"]

[package.metadata.docs.rs]
all-features = true
rustc-arg = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = "0.2"
bitflags = "2.2"
once_cell = "1.17"
relm4 = { version = "0.9", optional = true }
granite-rs-sys = { path = "./sys", version = "0.4.0" }

[dependencies.glib]
version = "0.20"

[dependencies.gio]
version = "0.20"

[dependencies.gdk]
package = "gdk4"
version = "0.9"

[dependencies.gtk]
package = "gtk4"
version = "0.9"
