[package]
name = "granite-rs"
version = "2.0.0"
edition = "2021"
authors = ["David Hewitt <davidmhewitt@gmail.com>"]
readme = "../README.md"
description = "Rust bindings for Granite"
license = "MIT"
homepage = "https://github.com/davidmhewitt/granite-rs"
repository = "https://github.com/davidmhewitt/granite-rs"
categories = ["api-bindings", "gui"]
keywords = ["gtk4-rs", "GUI"]

[features]
v7_1 = ["granite-rs-sys/v7_1"]
v7_2 = ["granite-rs-sys/v7_2", "v7_1"]
v7_3 = ["granite-rs-sys/v7_3", "v7_2"]
v7_4 = ["granite-rs-sys/v7_4", "v7_3"]
v7_5 = ["granite-rs-sys/v7_5", "v7_4"]
v7_6 = ["granite-rs-sys/v7_6", "v7_5"]
relm4 = ["dep:relm4"]

[package.metadata.docs.rs]
all-features = true
rustc-arg = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = "0.2"
bitflags = "2.2"
once_cell = "1.17"
relm4 = { version = "0.10", optional = true }
granite-rs-sys = { path = "./sys", version = "0.5.0" }

[dependencies.glib]
version = "0.21"

[dependencies.gio]
version = "0.21"

[dependencies.gdk]
package = "gdk4"
version = "0.10"

[dependencies.gtk]
package = "gtk4"
version = "0.10"
