[package]
name = "granite-rs-sys"
version = "0.2.1"
edition = "2021"
build = "build.rs"
links = "libgranite-7"
authors = ["David Hewitt <davidmhewitt@gmail.com>"]
readme = "../../README.md"
description = "FFI bindings for Granite"
license = "MIT"
homepage = "https://github.com/davidmhewitt/granite-rs"
repository = "https://github.com/davidmhewitt/granite-rs"
categories = ["api-bindings", "gui"]
keywords = ["gtk4-rs", "GUI"]

[package.metadata.system-deps.granite_7]
name = "granite-7"
version = "7"

[package.metadata.system-deps.granite_7.v7_1]
version = "7.1"

[package.metadata.system-deps.granite_7.v7_2]
version = "7.2"

[package.metadata.docs.rs]
features = []

[lib]
name = "granite_sys"

[dependencies]
libc = "0.2"

[dependencies.gdk]
package = "gdk4-sys"
version = "0.6"

[dependencies.gio]
package = "gio-sys"
version = "0.17"

[dependencies.glib]
package = "glib-sys"
version = "0.17"

[dependencies.gobject]
package = "gobject-sys"
version = "0.17"

[dependencies.gtk]
package = "gtk4-sys"
version = "0.6"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = ["gdk/dox", "gio/dox", "glib/dox", "gobject/dox", "gtk/dox"]
v7_1 = []
v7_2 = ["v7_1"]
