[package]
name = "granite-rs-sys"
version = "0.6.0"
edition = "2021"
build = "build.rs"
links = "libgranite-7"
authors = ["David Hewitt <davidmhewitt@gmail.com>"]
readme = "../../README.md"
description = "FFI bindings for Granite"
license = "MIT"
homepage = "https://github.com/davidmhewitt/granite-rs"
repository = "https://github.com/davidmhewitt/granite-rs"
categories = ["api-bindings", "gui"]
keywords = ["gtk4-rs", "GUI"]

[package.metadata.system-deps.granite_7]
name = "granite-7"
version = "7"

[package.metadata.system-deps.granite_7.v7_1]
version = "7.1"

[package.metadata.system-deps.granite_7.v7_2]
version = "7.2"

[package.metadata.system-deps.granite_7.v7_3]
version = "7.3"

[package.metadata.system-deps.granite_7.v7_4]
version = "7.4"

[package.metadata.system-deps.granite_7.v7_5]
version = "7.5"

[package.metadata.system-deps.granite_7.v7_6]
version = "7.6"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "granite_sys"

[dependencies]
libc = "0.2"

[dependencies.gdk-sys]
package = "gdk4-sys"
version = "0.10"

[dependencies.gio-sys]
package = "gio-sys"
version = "0.21"

[dependencies.glib-sys]
package = "glib-sys"
version = "0.21"

[dependencies.gobject-sys]
package = "gobject-sys"
version = "0.21"

[dependencies.gtk-sys]
package = "gtk4-sys"
version = "0.10"

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v7_1 = []
v7_2 = ["v7_1"]
v7_3 = ["v7_2"]
v7_4 = ["v7_3"]
v7_5 = ["v7_4"]
v7_6 = ["v7_5"]
